--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 asgiref==3.2.10
+autopep8==1.5.4
 Django==3.1.2
+mysqlclient==2.0.1
+pycodestyle==2.6.0
 python-dotenv==0.14.0
 pytz==2020.1
 sqlparse==0.4.1
+toml==0.10.1
