--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.2.10
 autopep8==1.5.4
 Django==3.1.2
+djangorestframework==3.12.1
 mysqlclient==2.0.1
 pycodestyle==2.6.0
 python-dotenv==0.14.0
